Сверстал и отстилизовал аккорддион

--- a/src/assets/scss/layout/variables.scss
+++ b/src/assets/scss/layout/variables.scss
@@ -1,3 +1,7 @@
-$mainfont: 'opensans', sans-serif;
+$basefontsize: 15px;
+
+$mainfont: 'Fira Sans', sans-serif;
 
 $bold: 400;
+
+$text-color: #4f4f4f;
