--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -1,20 +1,21 @@
 extends ../layout/main.pug
 
 mixin accordionItemContent(title,themes)
-    .akkordion__title
-        .akkordion__description #{title}
-    ul.akkordion__themes
+    .accordion__title
+        .accordion__description #{title}
+            i(class="fa fa-shopping-cart")
+    ul.accordion__themes
         each thm in themes
-            li.akkordion__theme
-                a(href="#" onClick="event.preventDefault()").akkordion__theme-title #{thm}
+            li.accordion__theme
+                a(href="#" onClick="event.preventDefault()").accordion__theme-title #{thm}
 
 block content
     section.section
         .container
             .logo
                 img(src="assets/img/logo.png").logo__icon
-            .akkordion
-                ul.akkordion__list
+            .accordion
+                ul.accordion__list
                     -
                      var akkodionItemsArr = [
                          {
@@ -41,10 +42,10 @@ block content
                      ]
                     each item, index in akkodionItemsArr
                         if (index === 0)
-                            li.akkordion__item.is_active
+                            li(data-index=`${index}`).accordion__item.is_active
                                 +accordionItemContent(item.title, item.themes)
                         else
-                            li.akkordion__item
+                            li(data-index=`${index}`).accordion__item
                                 +accordionItemContent(item.title, item.themes)
                                 
 
