--- a/src/assets/scss/layout/base.scss
+++ b/src/assets/scss/layout/base.scss
@@ -1,6 +1,6 @@
 // Base
 
-@import url('https://necolas.github.io/normalize.css/latest/normalize.css');
+@import url('https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css');
 @import url('https://fonts.googleapis.com/css?family=Fira+Sans:300,500');
 
 * {
